# CV-geo

./: .gitignore  CV-geo.cabal  LICENSE
src/CV/: Geo.hs
src/CV/Geo/: Indices.hs  Projections.hs  Types.hs
src/CV/Geo/Formats/: ENVI.hs  GeoTiff.hs
