Name:                CV-geo
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Heikki Salo
Maintainer:          heikki.ao.salo@iki.fi
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.2

Library
    hs-source-dirs: src
    Exposed-modules:
      CV.Geo
     ,CV.Geo.Types
     ,CV.Geo.Formats.GeoTiff
     ,CV.Geo.Formats.ENVI
     ,CV.Geo.Projections

    Build-depends:
      CV >= 0.3.5.3
     ,base
     ,filepath
     ,carray
     ,bytestring
     ,text
     ,unix
     ,attoparsec
